--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,210 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;900&display=swap");
 @import "reset.css";
+
+html {
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 14px;
+}
+
+body {
+    overflow-x: hidden;
+    color: rgb(29, 29, 31);
+    letter-spacing: -0.05em;
+    background-color: white;
+}
+
+p {
+    line-height: 1.6;
+}
+
+a {
+    color: rgb(29, 29, 31);
+    text-decoration: none;
+}
+
+strong {
+    font-weight: bold;
+}
+
+.global-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 44px;
+    padding: 0 16px;
+}
+
+.local-nav {
+    position: absolute;
+    top: 45px;
+    left: 0;
+    width: 100%;
+    height: 52px;
+    border-bottom: 1px solid #dddddd;
+    padding: 0 16px;
+}
+
+.global-nav__links,
+.local-nav__links {
+    display: flex;
+    align-items: center;
+    max-width: 1000px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.global-nav__links {
+    justify-content: space-between;
+}
+
+.local-nav__item.product-name {
+    margin-right: auto;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+.local-nav__item {
+    font-size: 0.8rem;
+}
+
+.local-nav__item:not(.product-name) {
+    margin-left: 2em;
+}
+
+.scroll-section {
+    padding-top: 50vh;
+    box-sizing: border-box;
+    border: 5px solid red;
+}
+
+.title {
+    font-size: 4rem;
+    text-align: center;
+    font-weight: bold;
+}
+
+.main-message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3em;
+    font-size: 2.5rem;
+}
+
+.main-message p {
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.2;
+}
+
+.main-message small {
+    display: block;
+    margin-bottom: 0.5em;
+    font-size: 1rem;
+}
+
+.description {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 16px;
+    font-size: 1.2rem;
+    color: #888888;
+}
+
+.description strong {
+    float: left;
+    margin-right: 0.2em;
+    font-size: 3rem;
+    color: rgb(29, 29, 31);
+}
+
+.desc-message {
+    width: 50%;
+    font-weight: bold;
+}
+
+.pin {
+    width: 1px;
+    height: 100px;
+    background-color: rgb(29, 29, 31);
+}
+
+.mid-message {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 16px;
+    font-size: 2rem;
+    color: rgb(29, 29, 31);
+    font-weight: bold;
+}
+
+.mid-message strong {
+    display: block;
+    color: #888888;
+}
+
+.canvas-caption {
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 16px;
+    color: #888888;
+    text-align: left;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 7rem;
+    border-top: 1px solid #dddddd;
+}
+
+.sticky-elem {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
+body#show-scene-1 #scroll-section-1 .sticky-elem,
+body#show-scene-2 #scroll-section-2 .sticky-elem,
+body#show-scene-3 #scroll-section-3 .sticky-elem,
+body#show-scene-4 #scroll-section-4 .sticky-elem {
+    display: block;
+}
+
+@media (min-width: 1024px) {
+    .title {
+        font-size: 9vw;
+    }
+
+    .main-message {
+        font-size: 4vw;
+    }
+
+    .description {
+        font-size: 2rem;
+    }
+
+    .description strong {
+        font-size: 6rem;
+    }
+
+    .main-message small {
+        font-size: 1.5vw;
+    }
+
+    .desc-message {
+        width: 20%;
+    }
+
+    .mid-message {
+        font-size: 4vw;
+    }
+
+    .canvas-caption {
+        font-size: 2rem;
+    }
+}
