--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ body {
     background-color: white;
 }
 
+body.before-load {
+    overflow: hidden;
+}
+
+body.before-load .container {
+    display: none;
+}
+
 p {
     line-height: 1.6;
 }
@@ -24,6 +32,10 @@ a {
 
 strong {
     font-weight: bold;
+}
+
+.container {
+    overflow-x: hidden;
 }
 
 .global-nav {
@@ -171,10 +183,11 @@ strong {
 
 .canvas-caption {
     max-width: 1000px;
-    margin: -5em auto 0;
+    margin: -24em auto 0;
     padding: 0 16px;
     color: #888888;
     text-align: left;
+    font-size: 1.2rem;
 }
 
 .footer {
@@ -213,12 +226,64 @@ body#show-scene-1 #scroll-section-1 .sticky-elem,
 body#show-scene-2 #scroll-section-2 .sticky-elem,
 body#show-scene-3 #scroll-section-3 .sticky-elem {
     display: block;
+    will-change: transform, opacity;
 }
 
 #scroll-section-3 {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    background-color: white;
+    opacity: 0;
+    transition: 0.5s;
+}
+
+.before-load .loading {
+    opacity: 1;
+}
+
+@keyframes loadingSpinAnimation {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes loadingCircleAnimation {
+    0% {
+        stroke-dashoffset: 157;
+    }
+    75% {
+        stroke-dashoffset: -147;
+    }
+    100% {
+        stroke-dashoffset: -157;
+    }
+}
+
+.loading-circle {
+    width: 54px;
+    height: 54px;
+    animation: loadingSpinAnimation 3s infinite;
+}
+
+.loading-circle circle {
+    stroke: black;
+    stroke-width: 4;
+    fill: white;
+    stroke-dasharray: 157;
+    stroke-dashoffset: 0;
+    animation: loadingCircleAnimation 1s infinite;
 }
 
 @media (min-width: 1024px) {
@@ -261,6 +326,8 @@ body#show-scene-3 #scroll-section-3 .sticky-elem {
     }
 
     .canvas-caption {
+        margin-top: -8rem;
+        padding: 0;
         font-size: 2rem;
     }
 }
